--- a/package.json
+++ b/package.json
@@ -12,11 +12,15 @@
     "@nextui-org/react": "^2.4.8",
     "@prisma/client": "^5.21.1",
     "@tanstack/react-query": "^5.59.15",
+    "axios": "^1.7.7",
     "date-fns": "^4.1.0",
     "framer-motion": "^11.11.9",
     "next": "14.2.15",
+    "openlayer-sdk": "^1.0.2",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-hot-toast": "^2.4.1",
+    "zustand": "^5.0.0"
   },
   "devDependencies": {
     "@types/node": "^20",
