--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@nextui-org/react": "^2.4.8",
+    "@openzeppelin/merkle-tree": "^1.0.7",
     "@prisma/client": "^5.21.1",
     "@tanstack/react-query": "^5.59.15",
     "axios": "^1.7.7",
@@ -20,6 +21,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
+    "viem": "^2.21.39",
     "zustand": "^5.0.0"
   },
   "devDependencies": {
