--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@nextui-org/react": "^2.4.8",
     "@prisma/client": "^5.21.1",
     "@tanstack/react-query": "^5.59.15",
+    "@tanstack/react-query-devtools": "^5.59.19",
     "axios": "^1.7.7",
     "date-fns": "^4.1.0",
     "framer-motion": "^11.11.9",
